--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,18 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-default navbar-expand-sm navbar-dark bg-darkblue">
 
-  <button class="navbar-toggler" type="button" 
-    data-toggle="collapse" data-target="#navbarNavAltMarkup" 
-    aria-controls="navbarNavAltMarkup" 
-    aria-expanded="false" aria-label="Toggle navigation">
-
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
-    <a class="navbar-brand" href="#">NFDI4Plants</a>
-    <div class="navbar-nav">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.svg" style="height: 3rem; margin-top: -20px; margin-bottom: -20px;">
+    </img>
+  </a>
+   
+  <div class="collapse navbar-collapse justify-content-between">
+    <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link active" href="/">Home</a>
+      <a class="nav-item nav-link" href="/news.html">News</a>
+      <a class="nav-item nav-link" href="/resources.html">Resources</a>
+      <a class="nav-item nav-link" href="/contact.html">Contact</a>
       <a class="nav-item nav-link" href="/about.html">About</a>
     </div>
   </div>
-
+  
+  <button class="navbar-toggler ml-auto" type="button" 
+    data-toggle="collapse" data-target="#navbarNavAltMarkup" 
+    aria-controls="navbarNavAltMarkup" 
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 </nav>
