--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,8 @@
   <body>
     {% include navbar.html %}
     {{ content }}
+    {% include footer.html %}
+    <script src="/assets/js/jquery-3.5.1.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
