--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -5,54 +5,42 @@ $mint: #1FC2A7;
 $white: #FEFEFE;
 $black: #3A3A3A;
 $darkblue: #2D3E50;
+$lightblue: #4FB3D9;
+$lightgray: #ECEBEB;
+$yellow: #F9CD69;
 
-img.col-bg {
-  width: 90%;
-  margin: auto $margin;
+h4, h5 {
+  text-transform:uppercase;
+  color: black;
 }
 
-.row {
-  &-mint-bg {
-    background: $mint;
-  }
-
-  &-darkblue-bg {
-    background: $darkblue;
-  }
+h1, h2 {
+  font-weight: bold;
+  color: black;
 }
 
-.col-md-6 {
-  padding: ($margin / 2) auto;
-  margin: ($margin / 2) auto;
+.bg-mint { background: $mint; }
+.text-mint { color: $mint; }
+
+.bg-darkblue { background: $darkblue; }
+.text-darkblue { color: $darkblue; }
+
+.bg-lightblue { background: $lightblue; }
+.text-lightblue { color: $lightblue; }
+
+.bg-lightgray { background: $lightgray; }
+.text-lightgray { color: $lightgray; }
+
+.bg-yellow { background: $yellow; }
+
+h4, h5 {
+  text-transform:uppercase;
+  color: black;
 }
 
-.col {
-  &-box {
-    padding: $margin * 2;
-    margin: $margin;
-
-    h2, h3, p {
-      margin: ($margin * 2) 0;
-    }
-  }
-
-  &-box-white {
-    border-radius: $corner-radius;
-    background: $white;
-  }
-
-  &-box-overlay {
-    border-radius: $corner-radius;
-    color: $black;
-    background: rgba(255, 255, 255, 0.7);
-    margin: 0px;
-  }
-
-  &-box-plants {
-    border-radius: $corner-radius;
-    background-image: url(../img/plants-bg.png);
-    background-size: cover;
-  }
+h1, h2 {
+  font-weight: bold;
+  color: black;
 }
 
 h3 {
@@ -60,15 +48,76 @@ h3 {
   margin-bottom: $margin;
 }
 
-.btn-learn-more {
-  border: 1px solid gray;
-  border-radius: 25px;
-  padding: $margin;
-  margin: ($margin * 2) 0;
-  text-decoration: none;
-  text-align: center;
+.news, .jobs
+{
+  .date {
+    text-align: right;
+  }
 
-  a {
-    color: gray;
+  h1, h2, h3, h4, h5, h6 {
+    text-transform: unset;
+  }
+
+  h5, h6 {
+    font-weight: bold;
+  }
+}
+
+.container-md {
+  @extend .rounded-lg, .my-md-3, .py-3;
+
+  .col > h4 {
+    border-bottom: 5px solid white;
+    display: inline-block;
+  
+    margin-left: -$spacer;
+    padding-left: $spacer;
+    padding-right: $spacer;
+    padding-bottom: .5em;
+  }
+
+  .text {
+    @extend .col-md-7, .align-self-center, .my-3;
+  }
+
+  .image {
+    @extend .col-md-5, .align-self-center, .my-3;
+
+    img {
+      max-height: 18rem;
+    }
+  }
+
+  .news {
+    @extend .col-md-6, .px-4;
+
+    .row {
+      @extend .align-items-start, .mx-2, .mt-2;
+    }
+    .date {
+      @extend .col-2, .mt-3;
+    }
+
+    .text {
+      @extend .col-10;
+    }
+  }
+
+  .jobs {
+    @extend .col-md-6, .px-4;
+
+    .text {
+      @extend .col-12;
+    }
+  }
+
+  .learn-more {
+    @extend .btn, .mt-3, .px-5, .rounded-pill, .btn-outline-secondary;
+  }
+
+  a.learn-more::after {
+    padding-left: 1rem;
+    font-size: 80%;
+    content: "▶";
   }
 }
