--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -33,6 +33,10 @@ h1, h2 {
 
 .bg-yellow { background: $yellow; }
 
+body { padding-top: 3rem; }
+
+
+
 h4, h5 {
   text-transform:uppercase;
   color: black;
