--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
 
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <div class="w-100 order-1 order-xs-0">
+    <!-- <div class="w-100 order-1 order-xs-0">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="/imprint.html">Imprint</a>
@@ -14,8 +14,30 @@
               <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
+    </div> -->
+
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+              <a class="nav-link" href="#">Imprint</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Privact</a>
+          </li>
+      </ul>
+    </div>
+
+    <div class="navbar-collapse collapse w-100 order-2 order-md-2 dual-collapse2">
+      <span class="navbar-text mx-auto">part of <a href="https://nfdi.de">NFDI</a></span>
+    </div>
+
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <span class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+        </ul>
     </div>
   </nav>
 
 </footer>
-<!-- Footer -->
