--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,12 @@
       <a class="nav-item nav-link" href="/resources.html">Resources</a>
       <a class="nav-item nav-link" href="/contact.html">Contact</a>
       <a class="nav-item nav-link" href="/about.html">About</a>
+      <a class="nav-item nav-link pl-3" href="https://twitter.com/nfdi4plants">
+        <i class="fa fa-twitter fa-lg"></i>
+      </a>
+      <a class="nav-item nav-link" href="https://github.com/nfdi4plants">
+        <i class="fa fa-github fa-lg"></i>
+      </a>
     </div>
   </div>
   
