--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     {% include navbar.html %}
-    {{ content }}
+    <div id="content">
+      {{ content }}
+    </div>
     {% include footer.html %}
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
