--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -33,8 +33,10 @@ h1, h2 {
 
 .bg-yellow { background: $yellow; }
 
-body { padding-top: 3rem; }
-
+#content {
+  padding-top: 5rem; 
+  min-height: calc(100vh - 135px);
+}
 
 
 h4, h5 {
