remove active tag from nav items

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
 
   <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="/">Home</a>
+      <a class="nav-item nav-link" href="/">Home</a>
       <a class="nav-item nav-link" href="/news.html">News</a>
       <a class="nav-item nav-link" href="/resources.html">Resources</a>
       <a class="nav-item nav-link" href="/contact.html">Contact</a>
