fix absolute path for nav logo

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-darkblue">
 
   <a class="navbar-brand" href="#">
-    <img src="assets/img/logo.svg" style="height: 3rem; margin-top: -1rem; margin-bottom: -1rem;">
+    <img src="/assets/img/logo.svg" style="height: 3rem; margin-top: -1rem; margin-bottom: -1rem;">
     </img>
   </a>
    
