--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="#">Imprint</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Privact</a>
+              <a class="nav-link" href="#">Privacy</a>
           </li>
       </ul>
     </div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <span class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/contact.html">Contact</a>
             </li>
