--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-darkblue">
 
   <a class="navbar-brand" href="#">
-    <img src="/assets/img/logo.svg" style="height: 3rem; margin-top: -1rem; margin-bottom: -1rem;">
-    </img>
+    <img src="/assets/img/logo.svg" style="height: 3rem; margin-top: -1rem; margin-bottom: -1rem;" alt="DataPLANT logo" />
   </a>
    
   <button class="navbar-toggler" 
