--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container-md">
   <div class="row">
-    <div class="column">
+    <div class="col-12">
       <h2>{{ page.title }}</h2>
       <h6>{{ page.date | date: "%B %-d, %Y" }}</h6>
       {{ content }}
