add privacy, imprint, mission, community, consor

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,11 +18,11 @@
 
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="#">Imprint</a>
+          <li class="nav-item">
+              <a class="nav-link" href="/imprint.html">Imprint</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Privacy</a>
+              <a class="nav-link" href="/privacy.html">Privacy</a>
           </li>
       </ul>
     </div>
