--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,9 +17,32 @@
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" href="/">Home</a>
       <a class="nav-item nav-link" href="/news.html">News</a>
-      <a class="nav-item nav-link" href="/resources.html">Resources</a>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/mission.html">Mission</a>
+          <a class="dropdown-item" href="/community.html">Community</a>
+          <a class="dropdown-item" href="/consortium.html">Consortium</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Resources
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/mission.html">ARCs</a>
+          <a class="dropdown-item" href="/community.html">Data Stewards</a>
+          <a class="dropdown-item" href="/consortium.html">Services</a>
+        </div>
+      </li>
+
       <a class="nav-item nav-link" href="/contact.html">Contact</a>
-      <a class="nav-item nav-link" href="/about.html">About</a>
+
+      
       <a class="nav-item nav-link pl-3" href="https://twitter.com/nfdi4plants">
         <i class="fa fa-twitter fa-lg"></i>
       </a>
