--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -3,10 +3,13 @@ layout: default
 ---
 
 <div class="container-md">
-  <div class="row">
+  <div class="row hero">
     <div class="col-12">
-      <h2>{{ page.title }}</h2>
-      <h6>{{ page.date | date: "%B %-d, %Y" }}</h6>
+      <h3>{{ page.title }}</h3>
+    </div>
+  </div>
+  <div class="row hero bg-white rounded">
+    <div class="col-12">
       {{ content }}
     </div>
   </div>
