--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,9 +34,8 @@
           Resources
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/mission.html">ARCs</a>
-          <a class="dropdown-item" href="/community.html">Data Stewards</a>
-          <a class="dropdown-item" href="/consortium.html">Services</a>
+          <a class="dropdown-item" href="/arcs.html">ARCs</a>
+          <a class="dropdown-item" href="/services.html">Services</a>
         </div>
       </li>
 
