--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,15 +2,17 @@
 layout: default
 ---
 
-<div class="container-md">
-  <div class="row hero">
-    <div class="col-12">
-      <h3>{{ page.title }}</h3>
+<div class="container-fluid">
+  <div class="container-md">
+    <div class="row hero">
+      <div class="col-12">
+        <h3 class="upcase">{{ page.title }}</h3>
+      </div>
     </div>
-  </div>
-  <div class="row hero bg-white rounded">
-    <div class="col-12">
-      {{ content }}
+    <div class="row hero bg-white rounded">
+      <div class="col-12">
+        {{ content }}
+      </div>
     </div>
   </div>
 </div>
