add structure page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,6 +25,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/mission.html">Mission</a>
           <a class="dropdown-item" href="/community.html">Community</a>
+          <a class="dropdown-item" href="/structure.html">Structure</a>
           <a class="dropdown-item" href="/consortium.html">Consortium</a>
         </div>
       </li>
