--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -57,8 +57,8 @@ h1, h2, h3, h4, h5, h6 {
 // MAIN CONTENT
 
 #content {
-  margin-top: 2.5rem; 
-  padding-top: 1rem;
+  // margin-top: 2.5rem; 
+  padding-top: 2.5rem;
   min-height: calc(100vh - 135px);
 }
 
