clean up footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,27 +2,14 @@
 <footer>
 
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <!-- <div class="w-100 order-1 order-xs-0">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/imprint.html">Imprint</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Privacy Policy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-    </div> -->
 
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="/imprint.html">Imprint</a>
+          <li class="nav-item active">
+              <a class="nav-link" href="#">Imprint</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/privacy.html">Privacy</a>
+              <a class="nav-link" href="#">Privacy</a>
           </li>
       </ul>
     </div>
