add Zenodo community link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -42,13 +42,15 @@
 
       <a class="nav-item nav-link" href="/contact.html">Contact</a>
 
-      
-      <a class="nav-item nav-link pl-3" href="https://twitter.com/nfdi4plants">
+      <a class="nav-item nav-link pl-md-3" href="https://twitter.com/nfdi4plants">
         <i class="fa fa-twitter fa-lg"></i>
       </a>
       <a class="nav-item nav-link" href="https://github.com/nfdi4plants">
         <i class="fa fa-github fa-lg"></i>
       </a>
+      <a class="nav-item nav-link" href="https://zenodo.org/communities/nfdi4plants">
+        <div style="margin: -0.14em 0 -0.4em .1em; font-size: 140%; font-weight: bold;">Z</div>
+      </a>      
     </div>
   </div>
   
