fix header single new item

--- a/_layouts/news-item.html
+++ b/_layouts/news-item.html
@@ -4,8 +4,9 @@ layout: default
 
 <div class="container-md">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 mt-6">
       <h4>{{ page.title }}</h4>
+
       <p class="pb-4">{{ page.date | date: "%B %-d, %Y" }}</p>
       
       
