--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,10 @@
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
       <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-              <a class="nav-link" href="#">Imprint</a>
+              <a class="nav-link" href="/imprint.html">Imprint</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Privacy</a>
+              <a class="nav-link" href="/privacy.html">Privacy</a>
           </li>
       </ul>
     </div>
@@ -21,7 +21,7 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="mailto:helpdesk@nfdi4plants.de">Contact</a>
             </li>
         </ul>
     </div>
