--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,7 +30,7 @@
         </div>
       </li>
 
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Resources
         </a>
@@ -38,9 +38,11 @@
           <a class="dropdown-item" href="/arcs.html">ARCs</a>
           <a class="dropdown-item" href="/services.html">Services</a>
         </div>
-      </li>
+      </li> -->
+      <a class="nav-item nav-link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u">Surway</a>
 
-      <a class="nav-item nav-link" href="/contact.html">Contact</a>
+
+      <a class="nav-item nav-link" href="mailto:helpdesk@nfdi4plants.de">Contact</a>
 
       <a class="nav-item nav-link pl-md-3" href="https://twitter.com/nfdi4plants">
         <i class="fa fa-twitter fa-lg"></i>
