--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,7 +39,7 @@
           <a class="dropdown-item" href="/services.html">Services</a>
         </div>
       </li> -->
-      <a class="nav-item nav-link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u">Surway</a>
+      <a class="nav-item nav-link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u">Survey</a>
 
 
       <a class="nav-item nav-link" href="mailto:helpdesk@nfdi4plants.de">Contact</a>
