--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   </head>
   <body class="{{ page.body-class }}">
     {% include navbar.html %}
-    <div id="content">
+    <div id="content" class="bg-lightblue">
       {{ content }}
     </div>
     {% include footer.html %}
