--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -113,6 +113,8 @@ $olive-lighter-80: #f0f5e6;
 $olive-lighter-90: #f8faf3;
 
 $lightgray: #ECEBEB;
+$gray: #D9D9D9;
+$darkgray: #6C757D;
 
 $white: #FEFEFE;
 
@@ -125,6 +127,9 @@ $black: #3A3A3A;
 .text-white { color: white; }
 
 //Background
+.bg-darkgray { background: $darkgray; }
+.bg-gray { background: $gray; }
+.bg-lightgray { background: $lightgray; }
 
 .bg-mint { background: $mint; }
 .bg-mint-light { background: $mint-lighter-50}
@@ -156,11 +161,11 @@ $black: #3A3A3A;
 .bg-olive-dark { background: $olive-darker-50}
 .bg-olive-darker { background: $olive-darker-70}
 
-.bg-split-top-mint{background: linear-gradient($white 20%, $mint 20%)}
-.bg-split-top-lightblue{background: linear-gradient($white 20%, $lightblue 20%)}
-.bg-split-top-darkblue{background: linear-gradient($white 20%, $darkblue 20%)}
-.bg-split-top-yellow{background: linear-gradient($white 20%, $yellow 20%)}
-.bg-split-top-olive{background: linear-gradient($white 20%, $olive 20%)}
+.bg-split-top-mint{background: linear-gradient($darkgray 20%, $mint 20%)}
+.bg-split-top-lightblue{background: linear-gradient($darkgray 20%, $lightblue 20%)}
+.bg-split-top-darkblue{background: linear-gradient($darkgray 20%, $darkblue 20%)}
+.bg-split-top-yellow{background: linear-gradient($darkgray 20%, $yellow 20%)}
+.bg-split-top-olive{background: linear-gradient($darkgray 20%, $olive 20%)}
 
 .bg-split-darkblue {background: linear-gradient($white 50%, $darkblue 50%)}
 .bg-split-darkblue-rev {background: linear-gradient($darkblue 50%, $white 50%)}
