--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -473,17 +473,20 @@ $red-lighter-90         : #F8E8EB;
 .has-bg-split-10-darkblue   {@include has-bg-split($darkblue, 0.1)}
 .has-bg-split-10-olive      {@include has-bg-split($olive, 0.1)}
 
-// Bulma overwrites
-$navbar-item-hover-background-color: $darkblue-lighter-20;
-$navbar-item-color: white;
-$navbar-item-hover-color: $lightblue;
-$navbar-item-active-color: white;
-
 .pt-10 {
     padding-top: 10% !important
 }
 .pb-10 {
     padding-bottom: 10% !important
 }
+// Bulma overwrites
+
+$link: $lightblue;
+
+$navbar-item-hover-background-color: $darkblue-lighter-20;
+$navbar-item-color: white;
+$navbar-item-hover-color: $lightblue;
+$navbar-item-active-color: white;
+
 
 @import "./bulma-0.9.1/bulma.sass"
