Install bulma via npm

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -489,4 +489,4 @@ $navbar-item-hover-color: $lightblue;
 $navbar-item-active-color: white;
 
 
-@import "./bulma-0.9.1/bulma.sass"
+@import "../../node_modules/bulma/bulma.sass"
