--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -469,9 +469,21 @@ $red-lighter-90         : #F8E8EB;
 
 
 .has-bg-split-10-mint       {@include has-bg-split($mint, 0.1)}
+.has-bg-split-20-mint       {@include has-bg-split($mint, 0.2)}
+.has-bg-split-30-mint       {@include has-bg-split($mint, 0.3)}
 .has-bg-split-10-lightblue  {@include has-bg-split($lightblue, 0.1)}
+.has-bg-split-20-lightblue  {@include has-bg-split($lightblue, 0.2)}
+.has-bg-split-30-lightblue  {@include has-bg-split($lightblue, 0.3)}
 .has-bg-split-10-darkblue   {@include has-bg-split($darkblue, 0.1)}
+.has-bg-split-20-darkblue   {@include has-bg-split($darkblue, 0.2)}
+.has-bg-split-30-darkblue   {@include has-bg-split($darkblue, 0.3)}
 .has-bg-split-10-olive      {@include has-bg-split($olive, 0.1)}
+.has-bg-split-20-olive      {@include has-bg-split($olive, 0.2)}
+.has-bg-split-30-olive      {@include has-bg-split($olive, 0.3)}
+
+.has-rounded-border {
+    border-radius: 6px;
+}
 
 .pt-10 {
     padding-top: 10% !important
@@ -479,6 +491,15 @@ $red-lighter-90         : #F8E8EB;
 .pb-10 {
     padding-bottom: 10% !important
 }
+
+.align-items-bottom {
+    margin-top: auto;
+}
+
+.align-items-top {
+    margin-bottom: auto;
+}
+
 // Bulma overwrites
 
 $link: $lightblue;
@@ -489,4 +510,8 @@ $navbar-item-hover-color: $lightblue;
 $navbar-item-active-color: white;
 
 
-@import "../../node_modules/bulma/bulma.sass"
+@import "../../node_modules/bulma/bulma.sass";
+
+body {
+    background-color: $white-bis;
+}
