Add "edit this page" option to kn. base

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -679,3 +679,8 @@ body {
     max-width: 70%;
     margin: 0 auto;
 }
+
+.front-header {
+    color: var(--header-color) !important;
+    font-weight: 700 !important;
+}
