fix error with .md reference lists :bug:

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -683,4 +683,5 @@ body {
 .front-header {
     color: var(--header-color) !important;
     font-weight: 700 !important;
+    margin-bottom: unset !important;
 }
