--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div class="flex flex-col min-h-screen">
+    <main class="flex flex-col min-h-screen">
       <div class="navbar bg-darkblue text-white">
         <a class="btn btn-ghost text-xl">MOCKUP NAVBAR PLS IGNORE</a>
       </div>
@@ -26,7 +26,7 @@ const { title } = Astro.props;
       <div class="footer bg-darkblue text-white">
         <a class="btn btn-ghost text-xl">MOCKUP Footer PLS IGNORE</a>
       </div>
-    </div>
+    </main>
   </body>
 </html>
 <style is:global>
