--- a/src/components/MainPageCard.astro
+++ b/src/components/MainPageCard.astro
@@ -5,7 +5,7 @@ interface MainPageCardProps {
   title: string
   subtitle: string
   index: number
-  bg: string
+  bgColor: string
   textColor: string
   buttonColor: string
   buttonTextColor: string
@@ -14,41 +14,41 @@ interface MainPageCardProps {
   textPosition: "left" | "right"
 }
 
-const mpcProps = Astro.props.mainPageCardProps as MainPageCardProps;
+const props = Astro.props.mainPageCardProps as MainPageCardProps;
 const html: string | null = Astro.props.html
-console.log(mpcProps)
 
-const cardClassTextRight = `card glass ${bgColorMap.get(mpcProps.bg)} ${textColorMap.get(mpcProps.textColor)} lg:card-side shadow-xl p-6`
-const cardClassTextLeft = `card ${bgColorMap.get(mpcProps.bg)} ${textColorMap.get(mpcProps.textColor)} lg:card-side shadow-xl p-6`
-const btnClass = `btn ${bgColorMap.get(mpcProps.buttonColor)} ${textColorMap.get(mpcProps.buttonTextColor)} text-lg`
+const cardClassTextRight = `card glass ${bgColorMap.get(props.bgColor)} ${textColorMap.get(props.textColor)} lg:card-side shadow-xl p-6`
+const cardClassTextLeft = `card ${bgColorMap.get(props.bgColor)} ${textColorMap.get(props.textColor)} lg:card-side shadow-xl p-6`
+const btnClass = `btn ${bgColorMap.get(props.buttonColor)} ${textColorMap.get(props.buttonTextColor)} text-lg`
+const articleClass = `prose md:prose-base lg:prose-lg ${textColorMap.get(props.textColor)}`
 ---
 
-<div class={mpcProps.textPosition === "left" ? cardClassTextLeft : cardClassTextRight}>
+<div class={props.textPosition === "left" ? cardClassTextLeft : cardClassTextRight}>
 {
-    mpcProps.textPosition === "left"
+    props.textPosition === "left"
     ? 
     <div class="card-body">
-      <h1 class="card-title text-5xl mb-4">{mpcProps.title}</h1>
-      <h2 class="card-title text-3xl mb-4">{mpcProps.subtitle}</h2>
-      {html && <div class="text-justify text-lg" set:html={html}></div>}
+      <h1 class="card-title text-4xl mb-4">{props.title}</h1>
+      <h2 class="card-title text-2xl mb-4">{props.subtitle}</h2>
+      {html && <article class={articleClass} set:html={html}></article>}
       <div class="card-actions justify-start">
-        <a href={mpcProps.link} class={btnClass}>Learn more</a>
+        <a href={props.link} class={btnClass}>Learn more</a>
       </div>
     </div>
     <figure>
-      <img src={mpcProps.image}/>
+      <img src={props.image}/>
     </figure>
      
     : 
     <figure>
-      <img src={mpcProps.image}/>
+      <img src={props.image}/>
     </figure>
     <div class="card-body">
-      <h2 class="card-title text-5xl mb-4">{mpcProps.title}</h2>
-      <h2 class="card-title text-3xl mb-4">{mpcProps.subtitle}</h2>
-      {html && <div class="text-justify text-lg" set:html={html}></div>}
+      <h1 class="card-title text-4xl mb-4">{props.title}</h1>
+      <h2 class="card-title text-2xl mb-4">{props.subtitle}</h2>
+      {html && <article class={articleClass} set:html={html}></article>}
       <div class="card-actions justify-end mt-4 mb-4">
-        <a href={mpcProps.link} class={btnClass}>Learn more</a>
+        <a href={props.link} class={btnClass}>Learn more</a>
       </div>
     </div>
   
