--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,11 +21,11 @@ const { title } = Astro.props;
   </head>
   <body>
     <main class="flex flex-col min-h-screen">
-      <Navbar client:only/>
+      <Navbar client:only="lit"/>
       <div class="grow">
         <slot />
       </div>
-      <Footer client:only/>
+      <Footer client:only="lit"/>
     </main>
   </body>
 </html>
